# exam-services

./: .gitignore  Cargo.toml  LICENSE  README.md  cron.production  cron.staging  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: auto-release.yaml  deploy.yaml  docr-cleanup.yml  version-bump.yaml
exam-utils/: CHANGELOG.md  Cargo.toml
exam-utils/src/: attempt.rs  error.rs  generation.rs  lib.rs  misc.rs
js-api/: CHANGELOG.md  Cargo.toml
js-api/src/: attempt.rs  generation.rs  lib.rs  misc.rs
moderation-service/: CHANGELOG.md  Cargo.toml  Dockerfile  sample.env
moderation-service/src/: attempt.rs  config.rs  db.rs  lib.rs  main.rs
moderation-service/tests/: moderate.rs
prisma/: Cargo.toml  index.js  schema.prisma
prisma/src/: db.rs  lib.rs  supabase.rs
screenshot-service/: Cargo.toml  Dockerfile  sample.env
screenshot-service/src/: config.rs  error.rs  main.rs  routes.rs  s3.rs
script/: CHANGELOG.md  Cargo.toml
script/src/: award_challenges_from_date.rs  ensure_awarded_challenges.rs  main.rs  update_python_gen_attempts.rs  util.rs  validate_all_generations.rs
