[package]
name = "moderation-service"
version = "3.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
futures-util = "0.3.31"
mongodb = { version = "3.3.0", features = ["bson-3"] }
prisma = { path = "../prisma" }
exam-utils = { path = "../exam-utils" }
sentry = { version = "0.46.2", features = ["tracing", "logs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
supabase_rs = "0.5.1"
chrono = { version = "0.4.43", features = ["serde"] }
postgrest = "1.6.0"

[dev-dependencies]
# mongo_drop = { version = "0.1.1", features = ["tracing"] }
prisma = { path = "../prisma" }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
