[package]
name = "prisma"
version = "1.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
mongodb = { version = "3.3.0", features = ["bson-3"] }
chrono = { version = "0.4.43", features = ["serde"] }
prisma-rust-schema = { git = "https://github.com/ShaunSHamilton/prisma-rust-schema.git", version = "2.1.0", features = [
  "bson",
  "mongodb",
] }
serde = "1.0.219"
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
