[package]
name = "script"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
mongodb = { version = "3.5.1", features = ["bson-3"] }
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
prisma = { path = "../prisma" }
exam-utils = { path = "../exam-utils" }
dotenvy = "0.15.7"
futures-util = "0.3.31"
indicatif = "0.18.3"
serde_json = "1.0.148"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
